# DLMI-challenge

./: .gitignore  README.md  pyproject.toml  requirements.txt  run_slurm.sh  submit.sh
data/: download.sh
notebooks/: F-01-data_exploration.ipynb  F-20-process_embeddings.ipynb  getting_started.ipynb
outputs/: linear_probe.pt  linear_probe_predictions.csv  linear_probe_smoke.pt
report/: midl-fullpaper.tex
scripts/: dinoV2_embds.py  fit_normalizer.py  linear_probing.py  phikon_embds.py  predict.py  sweep.py  train.py  visu_normalizer.py
src/challenge/: builder.py  compute.py  data.py  preprocessing.py  stain.py  utils.py
sweeps/: config.yaml
weights/: kimianet.sh
