[project]
name = "challenge"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Fotis", email = "fotiskapotos@gmail.com" }
]
requires-python = ">=3.9"
dependencies = []

[project.scripts]
challenge = "challenge:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
