[project]
name = "challenge"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Fotis", email = "fotiskapotos@gmail.com" }
]
requires-python = ">=3.9"
dependencies = [
    "h5py>=3.14.0",
    "matplotlib>=3.9.4",
    "pandas>=2.3.3",
    "scikit-image>=0.24.0",
    "torch>=2.8.0",
    "torchmetrics>=1.8.2",
    "torchvision>=0.23.0",
    "tqdm>=4.67.3",
    "umap-learn>=0.5.11",
]

[project.scripts]
challenge = "challenge:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ipykernel>=6.31.0",
]
